# language-translator-app

./: README.md  main.py  pyproject.toml
